# limpid

./: .env.example  .gitignore  CLAUDE.md  Containerfile  README.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/accounts/: admin.py  forms.py  models.py  services.py  urls.py  urls_home.py  views.py
apps/education/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/impact/: apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/market_data/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
apps/portfolio/: admin.py  forms.py  models.py  services.py  urls.py  views.py
apps/scenarios/: forms.py  models.py  services.py  urls.py  views.py
apps/transparency/: apps.py  forms.py  models.py  services.py  urls.py  views.py
config/: asgi.py  context_processors.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py  test.py
deploy/: compose.prod.yml
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.js
instructions/: Design_System_Implementation_Plan.md  Limpid_Design_Proposals.md  Limpide_Design_Proposals.md
instructions/Limpid_Crescendo_EN_v1/: README.md  curriculum_index.json
instructions/Limpid_Crescendo_FR_v1/: README.md  curriculum_index.json
instructions/Limpide_Crescendo_EN_v1/: README.md  curriculum_index.json  glossary_en.json
instructions/Limpide_Crescendo_FR_v1/: README.md  curriculum_index.json  glossary_fr.json
scripts/: deploy.sh  seed_all.sh  setup-rpi.sh
templates/: base.html
templates/pages/: 404.html  (+4 more)
(+172 files in other folders)
