[project]
name = "limpid"
version = "0.1.0"
description = "Educational investment dashboard for beginners"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2,<5.3",
    "django-allauth>=65.0",
    "django-htmx>=1.21",
    "django-vite>=3.0",
    "django-environ>=0.11",
    "whitenoise>=6.8",
    "psycopg[binary]>=3.2",
    "gunicorn>=23.0",
    "markdown>=3.7",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.9",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "django-debug-toolbar>=4.4",
    "django-browser-reload>=1.16",
    "pre-commit>=4.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "DJ"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"
